--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-dev-utils": "^9.1.0",
     "react-dom": "^16.10.2",
     "react-markdown": "^4.2.2",
+    "recharts": "^1.8.1",
     "resolve": "1.12.0",
     "resolve-url-loader": "3.1.0",
     "sass-loader": "7.2.0",
